Updated background image, positions and button styles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <link rel="stylesheet" href="assets/css/style.css">
         <!-- Jquery-->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap" rel="stylesheet">
 
     </head>
     <body>
@@ -23,7 +24,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
             
-        <div class = "titleAndStart col-lg-3 .col-lg-offset-7"></div>
+        <div class = "titleAndStart col-lg-6 .col-lg-offset-7"></div>
         
         <script src="assets/javascript/app.js" async defer></script>
     </body>
