Created all screens and functions and timer, working on making all questions populate and responsive

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <![endif]-->
             
         <div class = "titleAndStart col-lg-6 .col-lg-offset-7"></div>
+        <div class = "timerBox"></div>
         
         <script src="assets/javascript/app.js" async defer></script>
     </body>
